# necst-ros

./: #te1#  .gitignore  CMakeLists.txt  Pipfile  README.md  all_logger_tmp.py  calc_coord.py  camera_config.sh  install.sh  n2kosma.py  pyproject.toml  rosclean.sh  setup.py  stop_button.py  sxf_ROS_otf.py  test_button.py  typescript
ROS/: #ROS_otf.py#  #azel_calc.py#  20171011.txt  20171019.txt  20171020.txt  ROS_M2.py  ROS_M4.py  ROS_abs.py  ROS_antenna.py  ROS_authority_check.py  ROS_controller.py  ROS_dome.py  ROS_encoder.py  ROS_limit_check.py  ROS_limit_check_test.py  ROS_otf.py  ROS_ps.py  ROS_status.py  ROS_stop.py  ROS_tracking.py  azel_calc.py  board_0914.py  board_M2.py  board_M4.py  board_drive.py  coord.py  dome_pos.py  doppler_nanten.py  log.txt  math  obs_log.py  otf.py  package.xml  plot_encoder.py  portio  pyinterface.py  rospy  sys  test_board.py  threading  (+1 more)
launch/: #ROS_necst.launch#  ROS_launch.launch  ROS_logger.launch  ROS_necst.launch  d_ondo.launch  necctrl.launch  necctrl_reverse.sh  necctrl_start.sh  necobs.launch  necrec.launch  opt.launch  savedata.launch  test.launch
lib/: 1st_star_list.txt  ROS_node_status.py  XFFTS_n2fits_write.py  __init__.py  ac240.py  achiless.py  achilles.py  azel_calc.py  azel_to_radec.py  beam_calc.py  board_M2.py  board_M4.py  board_abs.py  calc_coord.py  calc_offset.py  ccd.py  ccd_okawa.py  ccd_old.py  coord.py  correct_fits.py  dfs_client.py  dfs_table.py  dome.txt  dome_board.py  dome_enc.txt  dome_enc_board.py  dome_pos.py  doppler_nanten.py  doppler_nanten_ast.py  doppler_nanten_old.py  enc.py  enc.txt  (+39 more)
(+411 files in other folders)
