[tool.poetry]
name = "necst-ros"
version = "1.0.1"
description = "NEw Control System for Telescope"
authors = ["NANTEN2 Software Team"]

[tool.poetry.dependencies]
python = ">=3.6.1, <3.10"
astropy = [
    { version = "^3.0", python = "<3.8" },
    { version = "^5.0.3", python = ">=3.8" }
]
matplotlib = "^3.3"
n_const = "^1.0.4"
neclib = "^0.6.2"
necstdb = "^0.2.5"
numpy = "^1.19"
pandas = ">=0.25, <2.0"
scipy = "^1.5"
typing-extensions = { version = "^3.10", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = "^6.1"
black = "^20.8b"
flake8 = "^3.8"
ipykernel = "^5.3"
jupyter = "^1.0"
m2r2 = "^0.2"
notebook = "^6.4"
pydata-sphinx-theme = "^0.4"
sphinx = "^3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
